<resources>
    <string name="app_name">Android Template</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">More Info</string>


    <string name="samples_title">Hello title</string>
    <string name="samples_subhead">Hello Subhead</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>

    <!-- Navigation Drawer -->
    <string name="navigation_explore">Explore</string>
    <string name="navigation_starred">Starred</string>
    <string name="navigation_my_events">My events</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_help_and_feedback">Help &amp; Feedback</string>
    <string name="navigation_log_out">Log out</string>

    <!-- Init Fragment -->
    <string name="welcome_title">Welcome</string>
    <string name="no_string"></string>
    <string name="log_in_facebook">Log in with Facebook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
