<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_events"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore_24dp1"
            android:title="@string/navigation_explore" />
        <item
            android:id="@+id/nav_starred"
            android:icon="@drawable/ic_star_24dp1"
            android:title="@string/navigation_starred" />

        <item
            android:id="@+id/nav_my_events"
            android:icon="@drawable/ic_event_24dp"
            android:title="@string/navigation_my_events" />

    </group>

    <group
    android:id="@+id/menu_settings"
    android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/navigation_settings" />

        <item
            android:id="@+id/nav_help_and_feedback"
            android:icon="@drawable/ic_help_24dp"
            android:title="@string/navigation_help_and_feedback" />

    </group>

    <group
        android:id="@+id/menu_logout"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_24dp"
            android:title="@string/navigation_log_out" />

    </group>

</menu>
